--- a/script_config/maven.gradle
+++ b/script_config/maven.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'signing'
 apply plugin: 'maven-publish'
+apply plugin: 'com.github.dcendents.android-maven'
 
 task sourceJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
