--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 //添加 com.sensorsdata.analytics.android 插件
 apply plugin: 'com.sensorsdata.analytics.android'
 
@@ -40,4 +41,8 @@ dependencies {
     implementation rootProject.ext.androidx.constraintlayout
     implementation project(':module_core')
     implementation project(':module_advert')
+
+    implementation "androidx.core:core-ktx:1.8.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$rootProject.ext.kotlins.kotlin_version"
+
 }
